@@ -7,7 +7,13 @@ import java.util.ArrayList;
 // -Mxm10m maximum heap size
 // -Mxs10m start heap size
 // -Xmn10m young generation
-// - XX:HeapDumpOnOutOfMemory creates heap dump when out of memory
+// -XX:HeapDumpOnOutOfMemory creates heap dump when out of memory
+// Select which GC to use:
+// -XX:+UseSerialGC
+// -XX:+UseParallelGC
+// -XX:+UseConcMarkSweepGC depricated RIP
+// -XX:+UseG1GC
+
 
 public class Main {
     public static void main(String[] args) throws InterruptedException {
@@ -20,7 +26,7 @@ public class Main {
                 for (int i = 0; i < 10; i++) {
                     customers.remove(0);
                 }
-//                Thread.sleep(1);
+                Thread.sleep(1);
             }
         }
     }
